# example-application

./: .gitignore  Makefile  README.md  rtt.sh  west.yml
app/: CMakeLists.txt  app.overlay  prj.conf
app-spi/: CMakeLists.txt  prj.conf
app-spi/boards/: d2v_hdk4_cpuapp.overlay  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
app-spi/src/: main.c
app/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
app/src/: main.c
boards/arm/d2v_hdk4/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  d2v_hdk4_cpuapp.dts  d2v_hdk4_cpuapp.yaml  d2v_hdk4_cpuapp_common-pinctrl.dtsi  d2v_hdk4_cpuapp_common.dts  d2v_hdk4_cpuapp_defconfig  d2v_hdk4_cpuapp_partition_conf.dts  d2v_hdk4_cpunet-pinctrl.dtsi  d2v_hdk4_cpunet.dts  d2v_hdk4_cpunet.yaml  d2v_hdk4_cpunet_defconfig  d2v_hdk4_shared_sram_planning_conf.dts  nrf5340_cpunet_reset.c  nrf5340_net_reset.c
dts/bindings/sensor/: ublox,ubxlib-shim.yaml
